--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 </head>
 <body style="background-color: rgb(73, 185, 185);">
+    <form>
 
 
     <input type="text" placeholder="Enter your name " required>
@@ -49,6 +50,7 @@
 <input type="reset">
 <br>
 <input class="type" type="submit" value="Send" style="background-color: blue;">
+    </form>
 
 </body>
 </html>
