--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <br>
 <input type="time">
 <br>
-<a class="video" href="https://lichess.org/">click here to play chess</a>
+<a target="_blank"  class="video" href="https://lichess.org/">click here to play chess</a>
 <br>
 <br>
 <input type="reset">
